// Copyright (C) 2019 THL A29 Limited, a Tencent company. All rights reserved.
//
// Licensed under the BSD 3-Clause License (the "License"); you may not use this
// file except in compliance with the License. You may obtain a copy of the
// License at
//
// https://opensource.org/licenses/BSD-3-Clause
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
// WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
// License for the specific language governing permissions and limitations under
// the License.

syntax = "proto3";

// Flare's RPC plugin does not support hbase protocol yet.
//
// Frankly we can still uses generic services generated by Flare's RPC plugin.
// But if we only need generic services, why use Flare's RPC plugin at all?
option cc_generic_services = true;

package example.hbase_echo;

message EchoRequest {
  string body = 1;
}

message EchoResponse {
  string body = 1;
}

service EchoService {
  rpc Echo(EchoRequest) returns(EchoResponse);
}
